Improve DHT lookup flow and make result harvesting more robust and precise